@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

'left to right direction

skinparam classAttributeIconSize 0

hide circle
hide methods



class Person{
   email
   name
   numberCitizen
   tin
   phoneNumber
}

class Employee{
   role
}

class Location{
    street
    zipCode
    stateUS
    city
    district
}




Person -- Location: owns >

Person <|-- Employee

@enduml